<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MVideo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fileName">文件名称</string>
    <string name="Bstart">播放</string>
    <string name="Bpause">暂停</string>
    <string name="BrePlay">重播</string>
    <string name="Bstop">停止</string>

</resources>
